terraform/environments/cloud-platform/cluster-core/user-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-workload
  labels:
    pod-security.kubernetes.io/enforce: restricted
