terraform/environments/cloud-platform/cluster-core/user-manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${route_name}
  namespace: test-workload
spec:
  parentRefs:
    - name: ${gateway_name}
      namespace: lbc-test
  hostnames:
    - "${hostname}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo
          port: 80
