terraform/environments/cloud-platform/cluster-core/user-manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echo-ingress
  namespace: test-workload
spec:
  podSelector:
    matchLabels:
      app: echo
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5678
